@@ -18,15 +18,15 @@
 
 package org.apache.cassandra.sidecar.routes.tokenrange;
 
+import java.util.Collections;
+
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.extension.ExtendWith;
 
-import io.netty.handler.codec.http.HttpResponseStatus;
-import io.vertx.core.json.JsonObject;
 import io.vertx.junit5.VertxExtension;
 import io.vertx.junit5.VertxTestContext;
+import org.apache.cassandra.sidecar.common.data.TokenRangeReplicasResponse;
 import org.apache.cassandra.testing.CassandraIntegrationTest;
-
-import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Test the token range replica mapping endpoint with the in-jvm dtest framework.
@@ -35,18 +35,17 @@ import static org.assertj.core.api.Assertions.assertThat;
  * therefore limit the instance size required to run the tests from CircleCI as the in-jvm-dtests tests are memory bound
  */
 @ExtendWith(VertxExtension.class)
-class BasicTestUnknownKeyspace extends BaseTokenRangeIntegrationTest
+class BasicMultiDCSingleReplicatedTest extends BaseTokenRangeIntegrationTest
 {
-    @CassandraIntegrationTest
-    void retrieveMappingWithUnknownKeyspace(VertxTestContext context) throws Exception
+    @CassandraIntegrationTest(nodesPerDc = 5, numDcs = 2, gossip = true)
+    void retrieveMappingSingleDCReplicatedRf3(VertxTestContext context)
+    throws Exception
     {
-        retrieveMappingWithKeyspace(context, "unknown_ks", response -> {
-            int errorCode = HttpResponseStatus.NOT_FOUND.code();
-            assertThat(response.statusCode()).isEqualTo(errorCode);
-            JsonObject body = response.bodyAsJsonObject();
-            assertThat(body.getInteger("code")).isEqualTo(errorCode);
-            assertThat(body.getString("message")).contains("Unknown keyspace");
-
+        int replicationFactor = 3;
+        createTestKeyspace(ImmutableMap.of("datacenter1", replicationFactor));
+        retrieveMappingWithKeyspace(context, TEST_KEYSPACE, response -> {
+            TokenRangeReplicasResponse mappingResponse = response.bodyAsJson(TokenRangeReplicasResponse.class);
+            assertMappingResponseOK(mappingResponse, replicationFactor, Collections.singleton("datacenter1"));
             context.completeNow();
         });
     }
